--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".mvp.ControlActivity">
+        <activity android:name=".mvp.controller.ControlActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
