--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".mvp.cemera.FullScreenVideoActivity" />
+        <activity android:name=".mvp.cemera.FullScreenVideoActivity"
+            android:screenOrientation="landscape"/>
         <service android:name=".RosConnectionService" />
 
     </application>
