--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,12 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile "io.reactivex.rxjava2:rxjava:2.1.4"
+    compile 'io.reactivex.rxjava2:rxjava:2.1.4'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
     compile files('libs/eventbus.jar')
     compile files('libs/java_websocket.jar')
-
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.8.4'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.4'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv5:0.8.4'
@@ -40,4 +39,5 @@ dependencies {
     compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.4'
     compile 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.8.4'
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.4'
+    compile files('libs/ros.jar')
 }
